# Drawing-Canvas

./: Blatt-1_Aufgabe-1.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  sample.jsonl  vite.config.ts
.templates/: canvas.html  home.html  login.html  register.html
src/: ArrayShapeManager.mts  BTreeShapeManager.mts  CanvasShapes.mts  DrawingCanvas.mts  EventBus.mts  EventManager.mts  MapShapeManager.mts  Menu.css  Menu.mts  SelectionManager.mts  SelectionMenuBuilder.mts  SelectionTool.mts  ShapeEventHelper.mts  ShapeEvents.mts  ShapeStore.mts  Shapes.mts  Style.css  ToolArea.mts  canvas.mts  main.mts  test.mts  types.mts
src/Components/: DrawingCanvas.mts  Menu.mts  MultiUser.mts  ToolArea.mts
src/Utils/: EventSerialize.mts  General.mts  ShapeHelper.mts
src/styles/: DrawingCanvas.css  Style.css  ToolArea.css
webserver/: Cargo.toml  canvas_eventlog.jsonl  user_eventlog.jsonl
webserver/src/: authentication.rs  main.rs  persistence.rs  spa.rs  templates.rs  user.rs  userstore.rs
webserver/src/canvas/: error.rs  events.rs  mod.rs  server.rs  socket_handler.rs  store.rs
webserver/src/user/: mod.rs  userstore.rs
