[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = { version = "4.8.0", features = ["cookies"] }
actix-ws = "0.3.0"
anyhow = "1.0.86"
argon2 = "0.5.3"
chrono = "0.4.38"
env_logger = "0.11.5"
futures-util = "0.3.30"
handlebars = { version = "6.0.0", features = ["dir_source"] }
jsonwebtoken = "9.3.0"
nanoid = "0.4.0"
password-hash = "0.5.0"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
serde_urlencoded = "0.7.1"
tokio = { version = "1.39.2", features = ["fs"] }

[features]
dev = []
default = []
